--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <header class="site-header">
                 <div class="container">
                     <div class="brand">
-                        <a href="index.html"><img class="logo" src="images/tat.png" alt=""></a>
+                        <a href="index.html"><img class="logo" src="tat.png" alt=""></a>
                     </div>
                     <a class="btn toggle-menu" href="#"><i class="fas fa-bars fa-fw"></i></a>
                     <nav class="site-navigation">
