--- a/priser.html
+++ b/priser.html
@@ -9,9 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@200;400&family=PT+Sans&family=Playfair+Display+SC&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" media="(min-width:768px)" href="css/tablet.css">
-        <link rel="stylesheet" media="(min-width:960px)" href="css/laptop.css">
-        <link rel="stylesheet" media="(min-width:1200px)" href="css/desktop.css">
+        <link rel="stylesheet" media="(min-width:768px)" href="tablet.css">
+        <link rel="stylesheet" media="(min-width:960px)" href="laptop.css">
+        <link rel="stylesheet" media="(min-width:1200px)" href="desktop.css">
         
     </head>
     <body>
@@ -21,7 +21,7 @@
             <header class="site-header">
                 <div class="container">
                     <div class="brand">
-                        <a href="index.html"><img class="logo" src="images/tat.png" alt=""></a>
+                        <a href="index.html"><img class="logo" src="tat.png" alt=""></a>
                     </div>
                     <a class="btn toggle-menu" href="#"><i class="fas fa-bars fa-fw"></i></a>
                     <nav class="site-navigation">
@@ -33,7 +33,7 @@
                         </ul>
                     </nav>
 
-                    <form action="/index.html">
+                    <form action="index.html">
                         <div class="search-box">
                             
                             <input type="text" class="search-text" name="search" placeholder="Sök">
