--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Lato:wght@300&family=Montserrat:wght@200;400&family=PT+Sans&family=Playfair+Display+SC&display=swap" rel="stylesheet">        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" media="(min-width:768px)" href="tablet.css">
         <link rel="stylesheet" media="(min-width:960px)" href="laptop.css">
         <link rel="stylesheet" media="(min-width:1200px)" href="desktop.css">
