--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <hr class="delare">
             </div>
       
-
+            </div>
+            
             <main class="site-main" id="to-content">
 
            <div class="container">
